--- a/src/assets/scss/variables.scss
+++ b/src/assets/scss/variables.scss
@@ -2,4 +2,5 @@
   --gray-color-1: rgba(0, 0, 0, 0.1);
   --gray-color-2: rgba(0, 0, 0, 0.2);
   --gray-color-3: rgba(0, 0, 0, 0.3);
+  --gray-color-4: rgba(0, 0, 0, 0.4);
 }
