--- a/src/components/chat-widget/messaging/message-item/MessageItem.module.scss
+++ b/src/components/chat-widget/messaging/message-item/MessageItem.module.scss
@@ -13,3 +13,9 @@
 .sent {
   justify-content: right;
 }
+
+.timestampBlock {
+  font-size: 0.9rem;
+  color: var(--gray-color-4);
+  margin-top: 5px;
+}
